# autotest

./: README.en.md  README.md  first.py
bilibili/: ._xmind_csv.py  __init__.py  test.py  test_example.py  variableType.py  实战_英雄游戏.py  弹窗确定按钮.py
day2/: Fibonacci.py  binary_search.py  bubble_sort.py  fourth.py  select_sort.py  test.py  test_05.py  test_06.py  test_07.py  test_1.py  test_2.py  test_3.py  test_4.py
day6/: computer.py  ecommerce.py  home_furniture.py  library.py  shopping.py
encapsulation/: area.py  children_father.py  course.py  dog_cat.py  employee_management.py  encapsulation_1.py  payment.py  person.py  polymorphic.py
exam/: binary_rearch.py  bubble_sort.py  r_manmgement.py  rearch_different.py  select_sort.py  (+1 more)
my_project/: pyproject.toml  setup.py
my_project/good_inventory/: main.py
my_project/good_inventory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
order_manager-0.0.1/: README.md  pyproject.toml
order_manager-0.0.1/hogwarts_function_utils/: anon.py  closure.py  demo_model.py  funtion1.py  order.py  product.py  sort.py  test_file.py  three.py  yingying.py
order_manager-0.0.1/hogwarts_function_utils/order_manager/: __main__.py
order_manager-0.0.1/hogwarts_function_utils/order_manager/controller/: order_controller.py  user_controller.py
order_manager-0.0.1/hogwarts_function_utils/order_manager/model/: order.py
order_manager-0.0.1/hogwarts_function_utils/order_manager/view/: login_ui.py  order_manager_ui.py
order_manager-0.0.1/order_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+515 files in other folders)
