[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "order-manager"
version = "0.0.1"
authors = [
    { name = "seveniruby" },
]
description = "订单管理系统"
readme = "README.md"

[project.scripts]
order-manager = "hogwarts_function_utils.order_manager.__main__:main"